<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/navigation_home">

    </item>
    <item
        android:id="@+id/report"
        android:icon="@drawable/ic_baseline_report_problem_24"
        android:title="@string/navigation_report">

    </item>
    <item
        android:id="@+id/qr_scan"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:title="@string/navigaion_qr">

    </item>
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/navigation_notifi">

    </item>
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/navigation_account">

    </item>
</menu>